# sdf_ui

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  TODO.md  TODO_GEN_ART.md  Tasks.md  examples.py  masked_union_sandbox.py  precommit.bat  pyproject.toml  rotation_test.py  sandbox.py  sandbox.pyw  sdf_ui_diagram.drawio  setup.py  setup_env.bat  setup_env.sh  test.py  test2.py  test3.py  test_polys.py  text_rendering_sandbox.py  voronoi.py
.githooks/: install-hooks.bat  pre-commit  pre-commit.bat
build_tools/: __init__.py  generate_api_stubs.py
docs/: Makefile  api.rst  conf.py  core.rst  index.rst  make.bat
editor/: custom_layout.ini  editor.py  user_custom_layout.ini
examples/: animation_example.py  arc_example.py  capsule_example.py  complex_shapes_example.py  convex_polygon_example.py  dawn_example.py  diamond_example.py  ellipse_example.py  font_example.py  github_banner_example.py  half_plane_example.py  impossible_city.py  isolines_example.py  light_example.py  masked_union_example.py  neuromorphism_light_example.py  ngon_example.py  parallelogram_example.py  partial_derivative.py  polygon_example.py  render_api_example.py  ring_example.py  rotation_example.py  rotation_test.py  sector_example.py  striped_circles_example.py  text_rendering_example.py  transparency_example.py  triangle_example.py  voronoi_example.py
framework/: __init__.py  anim.py  ascii.py  context.py  main.py  shader.py  text.py  util.py
framework/core/: context.py  core.py  util.py
framework/go/: go.mod  go.py  main.go  numpy2go.h  run.cmd
framework/shader_files/: scratch.glsl
framework/shader_files/layer/: layer_mask.glsl  overlay.glsl  transparency.glsl
framework/shader_files/postprocessing/: blur13_hor.glsl  blur13_vert.glsl  dither_1bit.glsl  (+3 more)
framework/storage/: import.py  test_file.yaml
sandbox/: README.md  app.py  cs_scratch.py  sandbox.pyw  scratch.py  scratch_6.py  util.py  vectors.py  window.py
scratch/: bounding_box_sdf_rendering.py  framework.py  pascal_triangle_gaussian_blur_coefficients.py
sdf_ui/: colors.py  compose.py  sandbox.py  shader.py  vectors.py  window.py
sdf_ui/framework/: context.py  log.py  shader.py
sdf_ui/shader/: fragment.glsl  geo.glsl
sdf_ui/shader_files/: fragment.glsl  geo.glsl  scratch.glsl
src/sdf_ui/: __init__.py  __init__.pyi  anim.py  ascii.py  bw_to_sdf.py  context.py  core.py  log.py  text.py  util.py
src/sdf_ui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  helpers.py  test_arc_plugin.py  test_capsule_plugin.py  test_convex_polygon_plugin.py  test_core_api.py  test_diamond_plugin.py  test_ellipse_plugin.py  test_gap_coverage.py  test_half_plane_plugin.py  test_negative_combinations.py  test_ngon_plugin.py  test_parallelogram_plugin.py  test_plugins.py  test_polygon_plugin.py  test_render_api.py  test_render_integration.py  test_ring_plugin.py  test_sector_plugin.py  test_transform_plugins.py  test_utilities.py
(+205 files in other folders)
