[build-system]
requires = [
    "setuptools>=61.0", 
    "TTFQuery>=2.0.0b1", 
    "numpy>=1.22.3", 
    "opencv-python>=4.5.1.48", 
    "pillow>= 8.1.0", 
    "moderngl>= 5.6.4"]
build-backend = "setuptools.build_meta"

[project]
name = "sdf_ui"
version = "0.1.0"
description = "2D Rendering engine based on Signed Distance Functions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sebastianjkern/sdf_ui"
Issues = "https://github.com/sebastianjkern/sdf_ui/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["*.glsl"]