[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdf_ui"
version = "0.1.0"
description = "2D Rendering engine based on Signed Distance Functions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "TTFQuery>=2.0.0b1",
    "numpy>=1.22.3",
    "opencv-python>=4.5.1.48",
    "pillow>=8.1.0",
    "moderngl>=5.6.4",
    "console"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build",
    "ruff",
    "mypy",
    "pre-commit",
    "sphinx>=8.0"
]

[project.urls]
Homepage = "https://github.com/sebastianjkern/sdf_ui"
Issues = "https://github.com/sebastianjkern/sdf_ui/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sdf_ui = ["**/*.pyi", "py.typed", "core/plugins/**/*.glsl"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "__pycache__/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true
exclude = '^(build|dist|docs/_build|docs/_autosummary|\.venv|\.pytest|\.pytest_cache|__pycache__)/'
